if get_option('default_featured_apps')
  install_data('org.gnome.Software.Featured.xml',
    install_dir : join_paths(get_option('datadir'), 'app-info', 'xmls'),
  )
endif

if get_option('hardcoded_popular')
  install_data('org.gnome.Software.Popular.xml',
    install_dir : join_paths(get_option('datadir'), 'app-info', 'xmls'),
  )
endif
