if get_option('default_featured_apps')
  install_data('org.gnome.Software.Featured.xml',
    install_dir : join_paths(get_option('datadir'), 'swcatalog', 'xml'),
  )
endif

if get_option('hardcoded_curated')
  install_data('org.gnome.Software.Curated.xml',
    install_dir : join_paths(get_option('datadir'), 'swcatalog', 'xml'),
  )
endif
